test/extern/kbrady/extern_string_generic.good
extern_string_generic.chpl:2: error: extern procedure has arguments of type string
extern_string_generic.chpl:4: note: when instantiated from here
extern_string_generic.chpl:5: note: when instantiated from here
extern_string_generic.chpl:6: note: when instantiated from here
extern_string_generic.chpl:7: note: when instantiated from here
extern_string_generic.chpl:2: note: use c_ptrConst(c_char) instead
